added Benjamin to index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Welcome to Group Congo</h1>
     <p>My name is Faculty Nath</p>
 <p>my name is frank</p>
-
+<p>my name is Benjamin</p>
 
 </body>
 </html>
