Added Sheu Wasiu to index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Welcome to Group Congo</h1>
     <p>My name is Faculty Nath</p>
 <p>my name is frank</p>
+    <p>My Name is Sheu Wasiu</p>
 
 
 </body>
