Add comments to explain the steps to aid everyone trying to push

--- a/index.html
+++ b/index.html
@@ -7,12 +7,25 @@
     <title>Group Congo</title>
 </head>
 <body>
-    
+    <!-- The steps are
+    1. Go to the original repo
+    2. Fork the reppo to your own github account
+    3. git clone "the link to your forked version of the reppo"
+    4. cd Group-Congo
+    5. add your name below
+    6. git add .
+    7. git commit -m
+    and push to your github reppo after which you create a pull request
+
+    It is very easy guys, We can do it!!
+    -->
     <h1>Welcome to Group Congo</h1>
     <p>My name is Faculty Nath</p>
     <p>my name is frank</p>
-    <p>My Name is Sheu Wasiu</p
+    <p>My Name is Sheu Wasiu</p>
     <p>my name is Benjamin</p>
+
+
 
 
 </body>
