add ismaheel to index.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <p>My Name is Sheu Wasiu</p>
     <p>my name is Benjamin</p>
     <p>My name is Rachael</p>
+    <p>My name is ismaheel</p>
 
 
 
