added Ishaq to index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Group Congo</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- The steps are
     1. Go to the original repo
     2. Fork the reppo to your own github account
@@ -28,9 +28,6 @@
     <p>my name is Benjamin</p>
     <p>My name is Rachael</p>
     <p>My name is ismaheel</p>
-
-
-
-
-</body>
+    <p>My name is Ishaq</p>
+  </body>
 </html>
