--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
     <p>My name is ismaheel</p>
     <p>My name is Ishaq</p>
     <p>My name is Etinyene Ededem</p>
+     <p>My name is Akanni Peter</p>
   </body>
 </html>
